fix gap on category

--- a/src/modules/HomePage/components/Banner/Banner.module.scss
+++ b/src/modules/HomePage/components/Banner/Banner.module.scss
@@ -5,106 +5,107 @@
   flex-direction: column;
   max-width: 100%;
   text-align: center;
-  background-color: rgb(0, 0, 0);
+  background-color: $color-bg;
 
   @include on-tablet {
     flex-direction: row;
     text-align: left;
   }
-}
 
-.bannerContent {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-
-  @include on-tablet {
-    margin: 15px;
-    padding-left: 40px;
-    padding-top: 40px;
-    background-color: #323542;
-    border-radius: 15px;
-  }
-  @include on-desktop {
-    padding-left: 50px;
-  }
-}
-
-.bannerTitle {
-  margin-top: 30px;
-  margin-bottom: 40px;
-  font-size: 24px;
-  color: #2f1df0;
-  line-height: 1;
-  background: linear-gradient(to right, #2f1df0, #c47ef3);
-  -webkit-background-clip: text;
-  color: transparent;
-
-  @include on-tablet {
-    margin-top: 0;
-    margin-bottom: 0;
-    align-self: flex-start;
-  }
-
-  @include on-desktop {
-    font-size: 32px;
-  }
-}
-.bannerEmoji {
-  display: none;
-  color: yellow;
-
-  @include on-tablet {
-    display: inline;
-    margin-left: 8px;
-  }
-}
-
-.bannerDesktopContent {
-  display: none;
-  margin-top: 8px;
-
-  @include on-tablet {
+  &Content {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    justify-content: space-between;
-    padding-bottom: 20px;
+
+    @include on-tablet {
+      margin: 15px;
+      padding-left: 30px;
+      padding-top: 30px;
+      background-color: $color-icon;
+      border-radius: 15px;
+    }
+    @include on-desktop {
+      padding-left: 50px;
+    }
   }
 
-  @include on-desktop {
-    padding-bottom: 40px;
+  &Title {
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-size: 24px;
+    color: #2f1df0;
+    line-height: 1;
+    background: linear-gradient(to right, #2f1df0, #c47ef3);
+    -webkit-background-clip: text;
+    color: transparent;
+
+    @include on-tablet {
+      margin-top: 0;
+      margin-bottom: 0;
+      align-self: flex-start;
+    }
+
+    @include on-desktop {
+      font-size: 32px;
+    }
   }
-}
 
-.bannerText {
-  color: #85858b;
-}
+  &Emoji {
+    display: none;
+    color: yellow;
 
-.bannerButton {
-  padding: 15px 15px;
-  width: 170px;
-  background-color: inherit;
-  border: none;
-  border-radius: 50px;
-  border: 1px solid $color-text-secondary;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: $color-accent;
+    @include on-tablet {
+      display: inline;
+      margin-left: 8px;
+    }
   }
-}
 
-.bannerImageWrapper {
-  @include on-tablet {
-    margin-top: 0;
+  &DesktopContent {
+    display: none;
+    margin-top: 8px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      justify-content: space-between;
+      padding-bottom: 20px;
+    }
+
+    @include on-desktop {
+      padding-bottom: 40px;
+    }
   }
-}
 
-.bannerImage {
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
+  &Text {
+    color: #a9a9ad;
+  }
+
+  &Button {
+    padding: 15px 15px;
+    width: 170px;
+    background-color: inherit;
+    border-radius: 50px;
+    border: 1px solid $color-text-secondary;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-transform: uppercase;
+
+    &:hover {
+      background-color: $color-accent;
+    }
+  }
+
+  &ImageWrapper {
+    @include on-tablet {
+      margin-top: 0;
+    }
+  }
+
+  &Image {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
 }
